--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,38 @@
-== README
+# Moovup
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+## What is Moovup?
+Moovup is a web-application on which I worked on during more or less eight months. I was
+working for the start-up on my free time, in order to help them to technically set-up their project.
+Moovup is a platform which aims two kind of targets ; On the one hand, it targets local shopkeepers
+who needs to bring customers from their home to inside their shops. It could be restaurants, clothes
+stores or even garages as well. On the other hand, it offers to web surfers a tool to see and browse
+promotions and offers of local stores around them.
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+## How it works?
+* Moovup aims two type of users : professionals/shopkeepers and customers.
+* Shopkeepers could create and manage two kind of entities : shop and offer.
+* A shop refers to physical existing store. Moovup automatically builds a presentation page
+for each shop in his database which present contact and description information, and also
+current active offers.
+* An offer refers to a promotion or a good deal that a shop could potentially propose.
+* Shopkeepers can publish offers inside some of their shops for a given time.
+* Users are free to browse active offers or existing shops.
+* All shops and users are geolocalized thus it is possible to propose relevant content to users.
+* Offers are ordered by categories and themes and are managed at an administration level.
+* Users can like their favorite shops in order to access to their offers and information easily.
+
+
+## What does it rely on?
+* The whole application is built upon the ruby framework Ruby On Rails.
+* Modern web technologies are also included such as Jquery, html5, css3 and Bootstrap.
+* All files and server are hosted thanks to Heroku, which allows an easy build and deployment
+through a git repository.
+* Heroku also provides a PostgreSQL database even if SQLite is use locally.
+* The whole design is fully responsive and uses Ajax to improve user experience.
+* A bunch of Ruby gems and Jquery plugins (Devise, Geocoder, PaperClip, FancyBox and
+more ...) are used in order not to reimplement already existing features.
+
+
+You can access to a demo version directly on the heroku domain by the link below.
+[moovup on heroku](http://moovup.herokuapp.com)
